SyntaxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Daniel/IdeaProjects/LanguageSyntax/src/Syntax.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SyntaxParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115;
	public const int
		RULE_program = 0, RULE_commands = 1, RULE_command = 2, RULE_terms = 3, 
		RULE_term = 4, RULE_value = 5, RULE_lengthOf = 6, RULE_type = 7, RULE_identifier = 8, 
		RULE_listElement = 9, RULE_nonKeywordName = 10, RULE_number = 11, RULE_nonZeroNumber = 12, 
		RULE_digit = 13, RULE_nonZeroDigit = 14, RULE_flag = 15, RULE_text = 16, 
		RULE_textWithoutNewlineOrQuotationmarks = 17, RULE_controlStructures = 18, 
		RULE_loop = 19, RULE_if_else = 20, RULE_function = 21, RULE_takesArgument = 22, 
		RULE_parameter = 23, RULE_givesArgument = 24, RULE_nothing = 25, RULE_statement = 26, 
		RULE_assignment = 27, RULE_create = 28, RULE_give = 29, RULE_break = 30, 
		RULE_use = 31, RULE_useInput = 32, RULE_print = 33, RULE_read = 34, RULE_expression = 35, 
		RULE_operator = 36, RULE_character = 37, RULE_symbol = 38, RULE_symbolWitoutNewline = 39, 
		RULE_wsc = 40, RULE_comment = 41, RULE_a = 42, RULE_b = 43, RULE_c = 44, 
		RULE_d = 45, RULE_e = 46, RULE_f = 47, RULE_g = 48, RULE_h = 49, RULE_i = 50, 
		RULE_j = 51, RULE_k = 52, RULE_l = 53, RULE_m = 54, RULE_n = 55, RULE_o = 56, 
		RULE_p = 57, RULE_q = 58, RULE_r = 59, RULE_s = 60, RULE_t = 61, RULE_u = 62, 
		RULE_v = 63, RULE_w = 64, RULE_x = 65, RULE_y = 66, RULE_z = 67;
	public static readonly string[] ruleNames = {
		"program", "commands", "command", "terms", "term", "value", "lengthOf", 
		"type", "identifier", "listElement", "nonKeywordName", "number", "nonZeroNumber", 
		"digit", "nonZeroDigit", "flag", "text", "textWithoutNewlineOrQuotationmarks", 
		"controlStructures", "loop", "if_else", "function", "takesArgument", "parameter", 
		"givesArgument", "nothing", "statement", "assignment", "create", "give", 
		"break", "use", "useInput", "print", "read", "expression", "operator", 
		"character", "symbol", "symbolWitoutNewline", "wsc", "comment", "a", "b", 
		"c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", 
		"q", "r", "s", "t", "u", "v", "w", "x", "y", "z"
	};

	private static readonly string[] _LiteralNames = {
		null, "'program'", "'('", "')'", "'-'", "'0'", "'1'", "'2'", "'3'", "'4'", 
		"'5'", "'6'", "'7'", "'8'", "'9'", "'\"'", "','", "';'", "'='", "'+'", 
		"'*'", "'/'", "'modulo'", "'>'", "'<'", "'<='", "'>='", "'A'", "'B'", 
		"'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", "'J'", "'K'", "'L'", 
		"'M'", "'N'", "'O'", "'P'", "'Q'", "'R'", "'S'", "'T'", "'U'", "'V'", 
		"'W'", "'X'", "'Y'", "'Z'", "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", 
		"'g'", "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", "'p'", 
		"'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", "'x'", "'y'", "'z'", 
		"'\\newline'", "'\\n'", "'['", "']'", "'{'", "'}'", "'''", "'\\\"'", "'|'", 
		"'.'", "'?'", "'\\enter'", "'\\tab'", "'\\t'", "'\\r'", "'\\carriageReturn'", 
		"'\\f'", "'\\formfeed'", "'\\backspace'", "'\\b'", "'@'", "'!'", "'&'", 
		"':'", "'#'", "'$'", "'\\u00C2\\u00A4'", "'%'", "'\\u00C2\\u00B4'", "'`'", 
		"'~'", "'^'", "'\\u00C2\\u00A8'", "'_'", "'\\u00C2\\u00BD'", "'\\u00C2\\u00A7'", 
		"' '"
	};
	private static readonly string[] _SymbolicNames = {
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Syntax.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SyntaxParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SyntaxParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SyntaxParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WscContext[] wsc() {
			return GetRuleContexts<WscContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WscContext wsc(int i) {
			return GetRuleContext<WscContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SyntaxParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			Match(T__0);
			State = 137;
			wsc();
			State = 138;
			Match(T__1);
			State = 139;
			wsc();
			State = 140;
			commands();
			State = 141;
			wsc();
			State = 142;
			Match(T__2);
			State = 143;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandsContext : ParserRuleContext {
		public CommandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commands; } }
	 
		public CommandsContext() { }
		public virtual void CopyFrom(CommandsContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LastCommandContext : CommandsContext {
		public CommandContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		public LastCommandContext(CommandsContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterLastCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitLastCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLastCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NotLastCommandContext : CommandsContext {
		public CommandContext @this;
		public CommandsContext next;
		[System.Diagnostics.DebuggerNonUserCode] public WscContext wsc() {
			return GetRuleContext<WscContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		public NotLastCommandContext(CommandsContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterNotLastCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitNotLastCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotLastCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandsContext commands() {
		CommandsContext _localctx = new CommandsContext(Context, State);
		EnterRule(_localctx, 2, RULE_commands);
		try {
			State = 150;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				_localctx = new NotLastCommandContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 145;
				((NotLastCommandContext)_localctx).@this = command();
				State = 146;
				wsc();
				State = 147;
				((NotLastCommandContext)_localctx).next = commands();
				}
				break;
			case 2:
				_localctx = new LastCommandContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 149;
				((LastCommandContext)_localctx).@this = command();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class TermsCommandContext : CommandContext {
		public TermsContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public TermsContext terms() {
			return GetRuleContext<TermsContext>(0);
		}
		public TermsCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterTermsCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitTermsCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTermsCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionCommandContext : CommandContext {
		public FunctionContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public FunctionCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterFunctionCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitFunctionCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 4, RULE_command);
		try {
			State = 154;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new FunctionCommandContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 152;
				((FunctionCommandContext)_localctx).@this = function();
				}
				break;
			case 2:
				_localctx = new TermsCommandContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 153;
				((TermsCommandContext)_localctx).@this = terms();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermsContext : ParserRuleContext {
		public TermsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_terms; } }
	 
		public TermsContext() { }
		public virtual void CopyFrom(TermsContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LastTermContext : TermsContext {
		public TermContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public LastTermContext(TermsContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterLastTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitLastTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLastTerm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NotLastTermContext : TermsContext {
		public TermContext @this;
		public TermsContext next;
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermsContext terms() {
			return GetRuleContext<TermsContext>(0);
		}
		public NotLastTermContext(TermsContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterNotLastTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitNotLastTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotLastTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermsContext terms() {
		TermsContext _localctx = new TermsContext(Context, State);
		EnterRule(_localctx, 6, RULE_terms);
		try {
			State = 160;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new NotLastTermContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 156;
				((NotLastTermContext)_localctx).@this = term();
				State = 157;
				((NotLastTermContext)_localctx).next = terms();
				}
				break;
			case 2:
				_localctx = new LastTermContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 159;
				((LastTermContext)_localctx).@this = term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
	 
		public TermContext() { }
		public virtual void CopyFrom(TermContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementTermContext : TermContext {
		public StatementContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public StatementTermContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterStatementTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitStatementTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementTerm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ControlTermContext : TermContext {
		public ControlStructuresContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public ControlStructuresContext controlStructures() {
			return GetRuleContext<ControlStructuresContext>(0);
		}
		public ControlTermContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterControlTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitControlTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitControlTerm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CommentTermContext : TermContext {
		public CommentContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public CommentTermContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.EnterCommentTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISyntaxListener typedListener = listener as ISyntaxListener;
			if (typedListener != null) typedListener.ExitCommentTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISyntaxVisitor<TResult> typedVisitor = visitor as ISyntaxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommentTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 8, RULE_term);
		try {
			State = 165;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new ControlTermContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 162;
				((ControlTermContext)_localctx).@this = controlStructures();
				}
				break;
			case 2:
				_localctx = new StatementTermContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 163;
				((StatementTermContext)_localctx).@this = statement();
				}
				break;
			case 3:
				_localctx = new CommentTermContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 164;
				((CommentTermContext)_localctx).@this = comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
	 
		public ValueContext() { }
		public virtual void CopyFrom(ValueContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ReadValueContext : ValueContext {
		public ReadContext @this;
		[System.Diagnostics.DebuggerNonUserCode] public ReadContext read() {
			return GetRuleContext<ReadContext>(0);
		}
		public ReadValueContext(ValueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
